--- a/src/app/components/authorization/login/login.component.html
+++ b/src/app/components/authorization/login/login.component.html
@@ -1,1 +1,49 @@
-<p>login works!</p>
+<div class="container">
+    <div class="form-card">
+        <form #loginForm="ngForm">
+            <mat-card class="card">
+                <mat-card-header class="login-title">
+                    <span><b>Sign Up</b></span>
+                </mat-card-header>
+                <br/><br/><br/><br/><br/><br/><br/><br/>
+                <mat-card-content>
+                    <mat-form-field class="width"  appearance="outline">
+                        <mat-label>Email ID</mat-label>
+                        <input matInput type="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
+                        placeholder="Email ID" [(ngModel)]="user.email" #emailField="ngModel" name="EmailField" required>
+                        <mat-error *ngIf="emailField.errors?.required && emailField.touched">
+                        Email is required</mat-error>
+                        <mat-error *ngIf="emailField.errors?.pattern">Email Pattern incorrect
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="width" appearance="outline">
+                        <mat-label>Password</mat-label>
+                        <input matInput #x type="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
+                          placeholder="Password" [(ngModel)]="user.password" #passwordField="ngModel" name="password" required>
+                        <button mat-button matSuffix (click)="x.type=x.type=='password'?'text':'password'">
+                          <span *ngIf="x.type == 'password'">Show</span>
+                          <span *ngIf="x.type == 'text'">Hide</span>
+                        </button>
+                        <mat-error *ngIf="passwordField.errors?.required && passwordField.touched">
+                          Password is required</mat-error>
+                        <mat-error *ngIf="passwordField.errors?.pattern && passwordField.touched">
+                          Password must contain a small letter, a capital letter, a number and a special character</mat-error>
+                    </mat-form-field>
+                    <div class="text-right">
+                    <a [routerLink]="['/forgotpassword']" style="font-size: 18px">
+                        <span style = "color: #999999;">Forgot</span> <span class="color"> Password?</span></a>
+                    </div>
+                    <br/>
+                    <button class="login_button" type="button" (click)="loginUser()" [disabled]="loginForm.form.invalid"
+                        mat-stroked-button>
+                        <strong>SIGN UP</strong>
+                    </button>
+                    <br/><br/><br/><br/><br/><br/>
+                    <p style = "color: #999999; text-align: center; font-size: 20px;">Don't have an account?</p>
+                    <a [routerLink]="['/signup']" class="color" style="text-align: center; font-size: 18px;"><b>Sign Up</b></a>
+                    <br/><br/>
+                </mat-card-content>
+            </mat-card>
+        </form>
+    </div>
+</div>
