--- a/src/app/components/authorization/login/login.component.html
+++ b/src/app/components/authorization/login/login.component.html
@@ -3,22 +3,21 @@
         <form #loginForm="ngForm">
             <mat-card class="card">
                 <mat-card-header class="login-title">
-                    <span><b>Sign Up</b></span>
+                    <span><b>Sign In</b></span>
                 </mat-card-header>
                 <br/><br/><br/><br/><br/><br/><br/><br/>
                 <mat-card-content>
                     <mat-form-field class="width"  appearance="outline">
-                        <mat-label>Email ID</mat-label>
-                        <input matInput type="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
-                        placeholder="Email ID" [(ngModel)]="user.email" #emailField="ngModel" name="EmailField" required>
-                        <mat-error *ngIf="emailField.errors?.required && emailField.touched">
-                        Email is required</mat-error>
-                        <mat-error *ngIf="emailField.errors?.pattern">Email Pattern incorrect
-                        </mat-error>
+                        <mat-label>Username</mat-label>
+                        <input matInput type="text" 
+                        placeholder="Username" [(ngModel)]="user.username" #usernameField="ngModel" name="username" required>
+                        <mat-error *ngIf="usernameField.errors?.required && usernameField.touched">
+                        Username is required</mat-error>
+                        
                     </mat-form-field>
                     <mat-form-field class="width" appearance="outline">
                         <mat-label>Password</mat-label>
-                        <input matInput #x type="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
+                        <input matInput #x type="password" 
                           placeholder="Password" [(ngModel)]="user.password" #passwordField="ngModel" name="password" required>
                         <button mat-button matSuffix (click)="x.type=x.type=='password'?'text':'password'">
                           <span *ngIf="x.type == 'password'">Show</span>
@@ -26,8 +25,7 @@
                         </button>
                         <mat-error *ngIf="passwordField.errors?.required && passwordField.touched">
                           Password is required</mat-error>
-                        <mat-error *ngIf="passwordField.errors?.pattern && passwordField.touched">
-                          Password must contain a small letter, a capital letter, a number and a special character</mat-error>
+                        
                     </mat-form-field>
                     <div class="text-right">
                     <a [routerLink]="['/forgotpassword']" style="font-size: 18px">
@@ -36,7 +34,7 @@
                     <br/>
                     <button class="login_button" type="button" (click)="loginUser()" [disabled]="loginForm.form.invalid"
                         mat-stroked-button>
-                        <strong>SIGN UP</strong>
+                        <strong>LogIn</strong>
                     </button>
                     <br/><br/><br/><br/><br/><br/>
                     <p style = "color: #999999; text-align: center; font-size: 20px;">Don't have an account?</p>
