--- a/src/app/components/authorization/login/login.component.html
+++ b/src/app/components/authorization/login/login.component.html
@@ -8,16 +8,17 @@
                 <br/><br/><br/><br/><br/><br/><br/><br/>
                 <mat-card-content>
                     <mat-form-field class="width"  appearance="outline">
-                        <mat-label>Username</mat-label>
-                        <input matInput type="text" 
-                        placeholder="Username" [(ngModel)]="user.username" #usernameField="ngModel" name="username" required>
-                        <mat-error *ngIf="usernameField.errors?.required && usernameField.touched">
-                        Username is required</mat-error>
-                        
+                        <mat-label>Email ID</mat-label>
+                        <input matInput type="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" 
+                        placeholder="Email ID" [(ngModel)]="user.email" #emailField="ngModel" name="email" required>
+                        <mat-error *ngIf="emailField.errors?.required && emailField.touched">
+                        Email Id is required</mat-error>
+                        <mat-error *ngIf="emailField.errors?.pattern">Email Id is invalid
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field class="width" appearance="outline">
                         <mat-label>Password</mat-label>
-                        <input matInput #x type="password" 
+                        <input matInput #x type="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
                           placeholder="Password" [(ngModel)]="user.password" #passwordField="ngModel" name="password" required>
                         <button mat-button matSuffix (click)="x.type=x.type=='password'?'text':'password'">
                           <span *ngIf="x.type == 'password'">Show</span>
@@ -25,7 +26,8 @@
                         </button>
                         <mat-error *ngIf="passwordField.errors?.required && passwordField.touched">
                           Password is required</mat-error>
-                        
+                        <mat-error *ngIf="passwordField.errors?.pattern">
+                            Password must contain a small letter, a capital letter, a number and a special character</mat-error>
                     </mat-form-field>
                     <div class="text-right">
                     <a [routerLink]="['/forgotpassword']" style="font-size: 18px">
