--- a/src/app/components/authorization/forgot-password/forgot-password.component.html
+++ b/src/app/components/authorization/forgot-password/forgot-password.component.html
@@ -1,1 +1,44 @@
-<p>forgot-password works!</p>
+<div class="container">
+    <div class="form-card">
+        <form #loginForm="ngForm">
+            <mat-card class="card">
+                <mat-card-header class="login-title">
+                    <span><b>Forgot Password</b></span>
+                </mat-card-header>
+                <br/><br/><br/><br/><br/><br/><br/><br/>
+                <mat-card-content>
+                    <mat-form-field class="width"  appearance="outline">
+                        <mat-label>Email ID</mat-label>
+                        <input matInput type="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" 
+                        placeholder="Email ID" [(ngModel)]="user.email" #emailField="ngModel" name="email" required>
+                        <mat-error *ngIf="emailField.errors?.required && emailField.touched">
+                        Email Id is required</mat-error>
+                        <mat-error *ngIf="emailField.errors?.pattern">Email Id is invalid
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="width"  appearance="outline">
+                        <mat-label>Please select your security question</mat-label>
+                        <mat-select [(ngModel)]="user.security_question" name="question">
+                          <mat-option *ngFor="let question of security_questions" [value]="question">
+                            {{question}}
+                          </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field class="width"  appearance="outline">
+                        <mat-label>Please enter your answer to the question</mat-label>
+                        <input matInput type="text" placeholder="Please select an answer to your question" 
+                        [(ngModel)]="user.security_answer" #securityanswer="ngModel" name="answer" required>
+                        <mat-error *ngIf="securityanswer.errors?.required && securityanswer.touched">
+                        Security Answer is required</mat-error>
+                    </mat-form-field>
+                    <br/>
+                    <button class="login_button" type="button" (click)="verifyUser()" [disabled]="loginForm.form.invalid"
+                        mat-stroked-button>
+                        <strong>Verify User</strong>
+                    </button>
+                    <br/><br/><br/><br/><br/><br/>
+                </mat-card-content>
+            </mat-card>
+        </form>
+    </div>
+</div>
