--- a/src/app/components/todo-list/upcoming/upcoming.component.sass
+++ b/src/app/components/todo-list/upcoming/upcoming.component.sass
@@ -13,3 +13,12 @@ mat-header-row
 tr
   &:hover
     backgroud: #efefef
+
+.header-right
+  float: right
+
+.button
+  background: #57b846 0% 0% no-repeat padding-box
+  border-radius: 6px
+  opacity: 1
+  color: white
