--- a/src/app/shared/head/head.component.html
+++ b/src/app/shared/head/head.component.html
@@ -1,24 +1,21 @@
 <div *ngIf="isLoggedIn">
     <div class="p-2" style="z-index: 10001; font-size: 16px;">
-        <span *ngIf="_auth.navbarOpen" style="padding-left: 40px;">
-            {{user.username}}
-            <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <button class="btn btn-link" style="color: black; outline: none;" (click)="openNavbar()">
-                <mat-icon aria-hidden="false">menu</mat-icon>
-            </button> 
-        </span>
-        <button *ngIf="!_auth.navbarOpen" class="btn btn-link" style="color: black; outline: none;" (click)="openNavbar()">
-            <mat-icon aria-hidden="false">menu</mat-icon>
-        </button>   
+        <br/>
+        <span style="padding-left: 40px;">TO-DO List</span>
+        <div class="header-right">
+            <span style="padding-right: 40px;">
+                Welcome, {{user.username}}
+                <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            </span>  
+        </div>        
     </div>
     
       
-    <div [ngClass]="{'menuFold': !_auth.navbarOpen, 'menu': _auth.navbarOpen}"
-    style="background: #FFFFFF 0% 0% no-repeat padding-box;box-shadow: 0px 3px 8px #3C775A21;opacity: 1;">
+    <div class="menu" style="background: #FFFFFF 0% 0% no-repeat padding-box;box-shadow: 0px 3px 8px #3C775A21;opacity: 1;">
         <div class="p-3 position-absolute" style="font-size: 16px; padding-left: 40px;">
-            <a><mat-icon aria-hidden="false">arrow_upward</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Upcoming Tasks</a>
+            <button mat-button (click)="goToPage('/upcoming')"><mat-icon aria-hidden="false">arrow_upward</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Upcoming Tasks</button>
             <br/><br/>
-            <a><mat-icon aria-hidden="false">archive</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Archieved Tasks</a>
+            <button mat-button (click)="goToPage('/archive')"><mat-icon aria-hidden="false">archive</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Archieved Tasks</button>
             
         </div>
     </div>
