--- a/src/app/shared/head/head.component.scss
+++ b/src/app/shared/head/head.component.scss
@@ -21,3 +21,17 @@
   box-shadow: 0px 3px 8px #3C775A21;
   opacity: 1;
   }
+
+  .header-right {
+    float: right;
+    font-size: 16px;
+  }
+
+button{
+    outline: none;
+}
+
+button:hover{
+    background-color: white;
+    color: #009D4F;
+}
