display labels and status

--- a/src/app/shared/head/head.component.html
+++ b/src/app/shared/head/head.component.html
@@ -16,6 +16,10 @@
             <button mat-button (click)="goToPage('/upcoming')"><mat-icon aria-hidden="false">arrow_upward</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Upcoming Tasks</button>
             <br/><br/>
             <button mat-button (click)="goToPage('/archive')"><mat-icon aria-hidden="false">archive</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Archieved Tasks</button>
+            <br/><br/>
+            <button mat-button (click)="goToPage('/label')"><mat-icon aria-hidden="false">label</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Labels</button>
+            <br/><br/>
+            <button mat-button (click)="goToPage('/status')"><mat-icon aria-hidden="false">storage</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Status</button>
             
         </div>
     </div>
