--- a/src/app/components/todo-list/upcoming/upcoming.component.sass
+++ b/src/app/components/todo-list/upcoming/upcoming.component.sass
@@ -8,11 +8,11 @@ th.mat-sort-header-sorted
   border-top: 1px solid
 
 mat-header-row
-  backgroud: red
+  background: red
 
 tr
   &:hover
-    backgroud: #efefef
+    background: #efefef
 
 .header-right
   float: right
