--- a/src/app/components/todo-list/label/label.component.html
+++ b/src/app/components/todo-list/label/label.component.html
@@ -21,7 +21,7 @@
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
     <ng-container matColumnDef='label'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Labels</th>
-      <td mat-cell *matCellDef="let element">{{element}}</td>
+      <td mat-cell *matCellDef="let element" (click)="labelDet(element)">{{element}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
