--- a/src/app/components/todo-list/label/label.component.html
+++ b/src/app/components/todo-list/label/label.component.html
@@ -1,10 +1,6 @@
 <div class="container">
   <br/>
   <h2><b>Labels</b></h2>
-  <!-- <div class="header-right">
-    <button mat-button (click)="addLabel()" class="button"><mat-icon>add</mat-icon> New Label</button>
-    <br/><br/>
-  </div> -->
 
   <div class="add_new">
     <mat-card>
@@ -21,7 +17,7 @@
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
     <ng-container matColumnDef='label'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Labels</th>
-      <td mat-cell *matCellDef="let element" (click)="labelDet(element)">{{element}}</td>
+      <td mat-cell *matCellDef="let element" [routerLink]="['/labelDet', element ]">{{element}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
