--- a/src/app/components/todo-list/status/status.component.html
+++ b/src/app/components/todo-list/status/status.component.html
@@ -9,7 +9,7 @@
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
     <ng-container matColumnDef='status'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-      <td mat-cell *matCellDef="let element">{{element}}</td>
+      <td mat-cell *matCellDef="let element" [routerLink]="['/statusDet', element ]">{{element}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
