--- a/src/app/shared/head/head.component.html
+++ b/src/app/shared/head/head.component.html
@@ -15,12 +15,13 @@
         <div class="p-3 position-absolute" style="font-size: 16px; padding-left: 40px;">
             <button mat-button (click)="goToPage('/upcoming')"><mat-icon aria-hidden="false">arrow_upward</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Upcoming Tasks</button>
             <br/><br/>
+            <button mat-button (click)="goToPage('/completed')"><mat-icon aria-hidden="false">check_circle_outline</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Completed Tasks</button>
+            <br/><br/>
             <button mat-button (click)="goToPage('/archive')"><mat-icon aria-hidden="false">archive</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Archieved Tasks</button>
             <br/><br/>
             <button mat-button (click)="goToPage('/label')"><mat-icon aria-hidden="false">label</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Labels</button>
             <br/><br/>
             <button mat-button (click)="goToPage('/status')"><mat-icon aria-hidden="false">storage</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Status</button>
-            
         </div>
     </div>
 </div>
