--- a/src/app/components/todo-list/archive/archive.component.html
+++ b/src/app/components/todo-list/archive/archive.component.html
@@ -1,25 +1,41 @@
-<table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
-  <ng-container matColumnDef='date'>
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-    <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
-  </ng-container>
-  <ng-container matColumnDef='to-do'>
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
-    <td mat-cell *matCellDef="let element">{{element.value}}</td>
-  </ng-container>
-  <ng-container matColumnDef='label'>
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Label</th>
-    <td mat-cell *matCellDef="let element">{{element.label}}</td>
-  </ng-container>
-  <ng-container matColumnDef='status'>
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-    <td mat-cell *matCellDef="let element">{{element.status}}</td>
-  </ng-container>
-  <!-- <ng-container matColumnDef='action'>
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
-    <td mat-cell *matCellDef="let element">{{element.value}}</td>
-  </ng-container> -->
-  <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
-  <tr mat-row *matRowDef="let row; columns: _cols"></tr>
+<div class="container">
+  <br/>
+  <h2><b>Upcoming Tasks</b></h2>
+  <div class="header-right">
+    <button mat-button (click)="createTask()" class="button"><mat-icon>add</mat-icon> Create Task</button>
+    <br/><br/>
+  </div>
+  <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
+    <ng-container matColumnDef='date'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+      <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
+    </ng-container>
+    <ng-container matColumnDef='to-do'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
+      <td mat-cell *matCellDef="let element">{{element.value}}</td>
+    </ng-container>
+    <ng-container matColumnDef='label'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Label</th>
+      <td mat-cell *matCellDef="let element">{{element.label}}</td>
+    </ng-container>
+    <ng-container matColumnDef='status'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <td mat-cell *matCellDef="let element">{{element.status}}</td>
+    </ng-container>
+    <ng-container matColumnDef='action'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class="option" (click)="unarchiveItem(element)" style="cursor: pointer;"><mat-icon>arrow_upward</mat-icon></span>
+      </td>
+    </ng-container>
+    <!-- <ng-container matColumnDef='action'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
+      <td mat-cell *matCellDef="let element">{{element.value}}</td>
+    </ng-container> -->
+    <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
+    <tr mat-row *matRowDef="let row; columns: _cols"></tr>
 
-</table>
+  </table>
+</div>
