--- a/src/app/components/todo-list/label/label.component.html
+++ b/src/app/components/todo-list/label/label.component.html
@@ -3,20 +3,32 @@
   <h2><b>Labels</b></h2>
 
   <div class="add_new">
-    <mat-card>
+    <!--<mat-card>
       <div fxLayout="row" fxLayoutGap="10%" fxLayoutWrap>
         <mat-form-field class="w-100 h-100" appearance="outline">
           <mat-label>New Label</mat-label>
           <input matInput rows="10" placeholder="New Label" [(ngModel)]="new_label" name="new_label">
         </mat-form-field>
-        <button mat-button (click)="addLabel()" class="button">Add Label</button>
+        
       </div>
-    </mat-card>
+    </mat-card>-->
+    <button mat-button (click)="addLabel()" class="button"><mat-icon>add</mat-icon>Add Label</button>
+    <br/><br/><br/>
+    <mat-form-field class="w-100 h-100" appearance="outline">
+      <mat-label>Search Label</mat-label>
+      <input matInput placeholder="Search Label" (keyup)="_filterLabels($event)">
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let label of filteredLabel | async">
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <br/>
+    
   <div>
-  
+  <br/>
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
     <ng-container matColumnDef='label'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Labels</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Labels</th>
       <td mat-cell *matCellDef="let element" [routerLink]="['/labelDet', element ]">{{element}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
