--- a/src/app/components/todo-list/label-det/label-det.component.html
+++ b/src/app/components/todo-list/label-det/label-det.component.html
@@ -2,7 +2,7 @@
   <br/>
   <h2><b>{{_label}}</b></h2>
   <div class="header-right">
-    <button mat-button (click)="createTask()" class="button"><mat-icon>add</mat-icon> Create Task</button>
+    <button mat-button (click)="createTask()" class="button"><mat-icon>add</mat-icon> Add Task</button>
     <br/><br/>
   </div>
   
