--- a/src/app/components/todo-list/status-det/status-det.component.html
+++ b/src/app/components/todo-list/status-det/status-det.component.html
@@ -7,8 +7,8 @@
   </div>
   
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
-    <ng-container matColumnDef='date'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+    <ng-container matColumnDef='c_date'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Created on</th>
       <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
     </ng-container>
     <ng-container matColumnDef='to-do'>
@@ -23,10 +23,18 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
       <td mat-cell *matCellDef="let element">{{element.status}}</td>
     </ng-container>
-    <!-- <ng-container matColumnDef='action'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
-      <td mat-cell *matCellDef="let element">{{element.value}}</td>
-    </ng-container> -->
+    <ng-container matColumnDef='d_date'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Date</th>
+      <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'short' }}</td>
+    </ng-container>
+    <ng-container matColumnDef='action'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class="option" (click)="unarchiveItem(element)" style="cursor: pointer;"><mat-icon>arrow_upward</mat-icon></span>
+      </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
   </table>
