--- a/src/app/components/todo-list/status/status.component.scss
+++ b/src/app/components/todo-list/status/status.component.scss
@@ -5,7 +5,7 @@ table {
 }
 
 th.mat-sort-header-sorted {
-  color: white
+  color: black
 }
 
 .mat-table-sticky {
@@ -24,6 +24,10 @@ tr:hover {
   float: right
 }
 
+mat-form-field.mat-form-field {
+  width: 100%;
+}
+
 .dark_bg{
   background-color: $primary-color;
   color: white;
@@ -31,12 +35,12 @@ tr:hover {
 }
 
 .button{
-    background-color: $primary-color;
-    color: white;
-    border-radius: 6px;
-    width: 200px;
-    height: 50px;
-    position: absolute;
-    right: 15%;
-    opacity: 1;
+  background-color: $primary-color;
+  color: white;
+  border-radius: 6px;
+  width: 200px;
+  height: 50px;
+  position: absolute;
+  right: 15%;
+  opacity: 1;
 }
