--- a/src/app/components/todo-list/upcoming/upcoming.component.html
+++ b/src/app/components/todo-list/upcoming/upcoming.component.html
@@ -7,34 +7,34 @@
   </div>
   
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
-    <ng-container matColumnDef='date'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+    <ng-container matColumnDef='c_date'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Created on</th>
       <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
     </ng-container>
     <ng-container matColumnDef='to-do'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">to-do</th>
       <td mat-cell *matCellDef="let element">{{element.value}}</td>
     </ng-container>
     <ng-container matColumnDef='label'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Label</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Label</th>
       <td mat-cell *matCellDef="let element">{{element.label}}</td>
     </ng-container>
     <ng-container matColumnDef='status'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Status</th>
       <td mat-cell *matCellDef="let element">{{element.status}}</td>
     </ng-container>
+    <ng-container matColumnDef='d_date'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Due Date</th>
+      <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'short' }}</td>
+    </ng-container>
     <ng-container matColumnDef='action'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Action</th>
       <td mat-cell *matCellDef="let element">
         <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <span class="option" (click)="archiveItem(element)" style="cursor: pointer;"><mat-icon>archive</mat-icon></span>
       </td>
     </ng-container>
-    <!-- <ng-container matColumnDef='action'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
-      <td mat-cell *matCellDef="let element">{{element.value}}</td>
-    </ng-container> -->
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
   </table>
