--- a/src/app/components/todo-list/status/status.component.html
+++ b/src/app/components/todo-list/status/status.component.html
@@ -8,7 +8,7 @@
     <br /><br /><br />
     <mat-form-field class="w-100 h-100" appearance="outline">
       <mat-label>Search Status</mat-label>
-      <input matInput placeholder="Search Label" (keyup)="_filterLabels($event)">
+      <input matInput placeholder="Search Label" (keyup)="_filterStatus($event)">
     </mat-form-field>
     <br />
   </div>
