--- a/src/app/shared/head/head.component.html
+++ b/src/app/shared/head/head.component.html
@@ -22,6 +22,8 @@
             <button mat-button (click)="goToPage('/label')"><mat-icon aria-hidden="false">label</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Labels</button>
             <br/><br/>
             <button mat-button (click)="goToPage('/status')"><mat-icon aria-hidden="false">storage</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;Status</button>
+            <br/><br/>
+            <button mat-button (click)="goToPage('/account')"><mat-icon aria-hidden="false">account_circle</mat-icon> &nbsp;&nbsp;&nbsp;&nbsp;My Account</button>
         </div>
     </div>
 </div>
