--- a/src/app/components/todo-list/label-det/label-det.component.html
+++ b/src/app/components/todo-list/label-det/label-det.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <br/>
+  <br/><br/>
   <h2><b>{{_label}}</b></h2>
   <div class="header-right">
     <button mat-button (click)="createTask()" class="button"><mat-icon>add</mat-icon> Add Task</button>
@@ -8,27 +8,27 @@
   
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
     <ng-container matColumnDef='c_date'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Created on</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Created on</th>
       <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
     </ng-container>
     <ng-container matColumnDef='to-do'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>to-do</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg"> to-do</th>
       <td mat-cell *matCellDef="let element">{{element.value}}</td>
     </ng-container>
     <ng-container matColumnDef='label'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Label</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Label</th>
       <td mat-cell *matCellDef="let element">{{element.label}}</td>
     </ng-container>
     <ng-container matColumnDef='status'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Status</th>
       <td mat-cell *matCellDef="let element">{{element.status}}</td>
     </ng-container>
     <ng-container matColumnDef='d_date'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Date</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Due Date</th>
       <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'short' }}</td>
     </ng-container>
     <ng-container matColumnDef='action'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Action</th>
       <td mat-cell *matCellDef="let element">
         <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
