--- a/src/app/components/todo-list/label-det/label-det.component.scss
+++ b/src/app/components/todo-list/label-det/label-det.component.scss
@@ -1,3 +1,5 @@
+$primary-color: #57b846;
+
 table {
   width: 100%;
 }
@@ -27,4 +29,10 @@ tr:hover {
   border-radius: 6px;
   opacity: 1;
   color: white;
+}
+
+.dark_bg{
+  background-color: $primary-color;
+  color: white;
+  font-size: 16px;
 }
