--- a/src/app/components/todo-list/label/label.component.html
+++ b/src/app/components/todo-list/label/label.component.html
@@ -18,11 +18,11 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Labels</th>
       <td mat-cell *matCellDef="let element" >{{element.label}}</td>
     </ng-container>
-    <ng-container matColumnDef='number'>
+    <ng-container matColumnDef='task_number'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Total no Of Tasks</th>
       <td mat-cell *matCellDef="let element" >{{element.task_number}}</td>
     </ng-container>
-    <ng-container matColumnDef='archieved'>
+    <ng-container matColumnDef='archieved_task'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">No Of Archieved Tasks</th>
       <td mat-cell *matCellDef="let element" >{{element.archieved_task}}</td>
     </ng-container>
