--- a/src/app/components/todo-list/upcoming/upcoming.component.html
+++ b/src/app/components/todo-list/upcoming/upcoming.component.html
@@ -7,11 +7,11 @@
   </div>
   
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
-    <ng-container matColumnDef='c_date'>
+    <ng-container matColumnDef='date'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Created on</th>
       <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
     </ng-container>
-    <ng-container matColumnDef='to-do'>
+    <ng-container matColumnDef='value'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">to-do</th>
       <td mat-cell *matCellDef="let element">{{element.value}}</td>
     </ng-container>
@@ -23,12 +23,12 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Status</th>
       <td mat-cell *matCellDef="let element">{{element.status}}</td>
     </ng-container>
-    <ng-container matColumnDef='d_date'>
+    <ng-container matColumnDef='dueDate'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Due Date</th>
       <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'short' }}</td>
     </ng-container>
     <ng-container matColumnDef='action'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Action</th>
+      <th mat-header-cell *matHeaderCellDef class="dark_bg">Action</th>
       <td mat-cell *matCellDef="let element">
         <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
