--- a/src/app/components/authorization/signup/signup.component.scss
+++ b/src/app/components/authorization/signup/signup.component.scss
@@ -56,17 +56,6 @@ mat-card{
 }
 
 .login_button:disabled{
-    padding-left: 30px;
-    padding-right: 20px;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    height: 50px;
-    background-color: #57b846;
-    border-radius: 25px;
-    font-family: Ubuntu-Bold;
-    font-size: 15px;
+    background-color: #84858B;
     color: white;
-    line-height: 1.2;
-    text-transform: uppercase;
 }
