--- a/src/app/components/todo-list/archive/archive.component.html
+++ b/src/app/components/todo-list/archive/archive.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <br />
-  <h2><b>Upcoming Tasks</b></h2>
+  <h2><b>Archieved Tasks</b></h2>
   <div>
     <button mat-button (click)="createTask()" class="button header-right">
       <mat-icon>add</mat-icon> Create Task
