--- a/src/app/components/todo-list/add-task/add-task.component.html
+++ b/src/app/components/todo-list/add-task/add-task.component.html
@@ -32,14 +32,8 @@
             </mat-form-field>
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Status</mat-label>
-              <mat-select [formControl]="status" multiple>
-                <mat-select-trigger>
-                  {{status.value ? status.value[0] : ''}}
-                  <span *ngIf="status.value?.length > 1" class="example-additional-selection">
-                    (+{{status.value.length - 1}} {{status.value?.length === 2 ? 'other' : 'others'}})
-                  </span>
-                </mat-select-trigger>
-                <mat-option *ngFor="let stat of tasks.status" [value]="stat" (click)="selectedStatus(stat)">{{stat}}</mat-option>
+              <mat-select [formControl]="status" [(ngModel)]="created_task.status" name="status">
+                <mat-option *ngFor="let stat of tasks.status" [value]="stat">{{stat}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field color="primary" class="w-100" appearance="outline">
