--- a/src/app/components/todo-list/archive/archive.component.scss
+++ b/src/app/components/todo-list/archive/archive.component.scss
@@ -19,11 +19,11 @@ th.mat-sort-header-sorted {
 }
 
 mat-header-row {
-  backgroud: red;
+  background-color: red;
 }
 
 tr:hover {
-  backgroud: #efefef;
+  background-color: #efefef;
 }
 
 .header-right {
@@ -35,4 +35,43 @@ tr:hover {
   border-radius: 6px;
   opacity: 1;
   color: white;
+}
+
+.completed-switch {
+  width: 150px;
+  background: #BFEBD4 0% 0% no-repeat padding-box;
+  border-radius: 33px;
+  opacity: 1;
+  color: #319F5D;
+  text-align: center;
+}
+
+.not-started-switch {
+  width: 150px;
+  background: #FFE9BE 0% 0% no-repeat padding-box;
+  border-radius: 33px;
+  opacity: 1;
+  color: #E8AC2E;
+  text-align: center;
+}
+
+.progress-switch {
+  width: 150px;
+  background: #C8D8FC 0% 0% no-repeat padding-box;
+  border-radius: 20px;
+  opacity: 1;
+  color: #507EDE;
+  text-align: center;
+  outline: none;
+}
+button{
+  outline: none;
+}
+.cancelled-switch {
+  width: 150px;
+  background: #FCC8D5 0% 0% no-repeat padding-box;
+  border-radius: 33px;
+  opacity: 1;
+  color: #C64F6C;
+  text-align: center;
 }
