--- a/src/app/components/todo-list/upcoming/upcoming.component.html
+++ b/src/app/components/todo-list/upcoming/upcoming.component.html
@@ -1,16 +1,18 @@
 <div class="container">
-  <br/>
+  <br />
   <h2><b>Upcoming Tasks</b></h2>
-  <div >
-    <button mat-button (click)="createTask()" class="button header-right"><mat-icon>add</mat-icon> Create Task</button>
-    <br/><br/><br/>
+  <div>
+    <button mat-button (click)="createTask()" class="button header-right">
+      <mat-icon>add</mat-icon> Create Task
+    </button>
+    <br /><br /><br />
     <mat-form-field class="w-100 h-100" appearance="outline">
       <mat-label>Search Task</mat-label>
       <input matInput placeholder="Search Task" (keyup)="_filterTasks($event)">
     </mat-form-field>
-    <br/>
+    <br />
   </div>
-  
+
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
     <ng-container matColumnDef='value'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">My Activity</th>
@@ -22,7 +24,33 @@
     </ng-container>
     <ng-container matColumnDef='status'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Current Status</th>
-      <td mat-cell *matCellDef="let element">{{element.status}}</td>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.status=='In Progress'">
+          <button mat-button [matMenuTriggerFor]="menu" class="progress-switch">In
+            Progress</button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item *ngFor="let item of all_status" (click)="changeStatus(element, item)">{{item}}</button>
+          </mat-menu>
+        </div>
+        <div *ngIf="element.status=='Not Started'">
+          <button mat-button [matMenuTriggerFor]="started" class="not-started-switch">Not Started</button>
+          <mat-menu #started="matMenu">
+            <button mat-menu-item *ngFor="let item of all_status" (click)="changeStatus(element, item)">{{item}}</button>
+          </mat-menu>
+        </div>
+        <div *ngIf="element.status=='Completed'">
+          <button mat-button [matMenuTriggerFor]="completed" class="completed-switch">Completed</button>
+          <mat-menu #completed="matMenu">
+            <button mat-menu-item *ngFor="let item of all_status" (click)="changeStatus(element, item)">{{item}}</button>
+          </mat-menu>
+        </div>
+        <div *ngIf="element.status=='Cancelled'">
+          <button mat-button [matMenuTriggerFor]="cancelled" class="cancelled-switch">Cancelled</button>
+          <mat-menu #cancelled="matMenu">
+            <button mat-menu-item *ngFor="let item of all_status" (click)="changeStatus(element, item)">{{item}}</button>
+          </mat-menu>
+        </div>
+      </td>
     </ng-container>
     <ng-container matColumnDef='dueDate'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Due Date</th>
@@ -31,11 +59,17 @@
     <ng-container matColumnDef='action'>
       <th mat-header-cell *matHeaderCellDef class="dark_bg">Action</th>
       <td mat-cell *matCellDef="let element">
-        <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
+        <span class="option" (click)="editItem(element)" style="cursor: pointer;">
+          <mat-icon>edit</mat-icon>
+        </span>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <span class="option" (click)="archiveItem(element)" style="cursor: pointer;"><mat-icon>archive</mat-icon></span>
+        <span class="option" (click)="archiveItem(element)" style="cursor: pointer;">
+          <mat-icon>archive</mat-icon>
+        </span>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <span class="option" (click)="deleteItem(element)" style="cursor: pointer;"><mat-icon>delete</mat-icon></span>
+        <span class="option" (click)="deleteItem(element)" style="cursor: pointer;">
+          <mat-icon>delete</mat-icon>
+        </span>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
